css/style.scss
---
---

@import 'jekyll-theme-cayman';

.page-header {
  .project-name {
    @include large {
      height: 100%;
      display: inline-block;
      vertical-align: middle;
      padding-right: 1.5rem;
      padding-bottom: 0;
    }
  }
  
  nav {
    height: 100%;
    display: inline-block;
    vertical-align: middle;
  }

  li {
    display: inline;
  }
    
  a {
    color: $header-heading-color;
    padding: 0.2rem 1rem;
    text-decoration: none;
  }

  a.current {
    @extend a;
    background-color: $header-heading-color;
    color: $header-bg-color;
    border-radius: 0.2rem;
  }

  a:hover {
    text-decoration: underline;
  }
}

code, pre {
  font-family: "Ubuntu Mono", Consolas, "Liberation Mono", Menlo, Courier, monospace;
}

